--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
             </svg>
           </div>
           <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="">livet på klank</a></li>
+            <li><a href="">fag</a></li>
+            <li><a href="">om skolen</a></li>
+            <li><a href="">viggo intra</a></li>
+            <li><a href="">kontakt os</a></li>
+            <li><a href="">tilmelding</a></li>
+            <p>hej hej hej</p>
           </ul>
         </div>
       </section>
