--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           <div class="navbar__socials">
             <ul>
               <li>
-                <a href=""><i class="fab fa-facebook-square"></i></a>
-                <a href=""><i class="fab fa-instagram-square"></i></a>
-                <a href=""><i class="fab fa-youtube-square"></i></a>
+                <a href=""><i class="fab fa-facebook"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-youtube"></i></a>
               </li>
             </ul>
           </div>
