--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </ul>
           </div>
         </div>
-        <section></section>
+        <section class="section-1"></section>
       </section>
     </div>
   </body>
