--- a/index.html
+++ b/index.html
@@ -57,7 +57,16 @@
             </ul>
           </div>
         </div>
-        <section class="section-1"></section>
+        <section class="section__1-container">
+          <div class="video__audio">
+            <video autoplay loop muted src="DJI_0008.mp4"></video>
+            <audio
+              autoplay
+              loop
+              src="Bird-singing-early-in-the-morning.mp3"
+            ></audio>
+          </div>
+        </section>
       </section>
     </div>
   </body>
