cdn added Yonas fix

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         <section></section>
       </section>
     </div>
-    <script>
-   $(document).ready(function () {
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
+        $(document).ready(function () {
         $('.navbar li').hover(
         function () {
             //show submenu
@@ -145,5 +145,6 @@
         });
     });
     </script>
+  
   </body>
 </html>
