--- a/index.html
+++ b/index.html
@@ -66,15 +66,24 @@
                 type="audio/mp3"
               />
             </audio>
-            <div class="video__overlay"></div>
+            <div class="video__overlay">
+              <button class="hero__efterskole-button">
+                <i class="fa fa-plus"></i>
+              </button>
+              <button class="hero__ridebane-button">
+                <i class="fa fa-plus"></i>
+              </button>
+              <button type="" class="hero__ridehal-button">
+                <i class="fa fa-plus"></i>
+              </button>
+              <button type="" class="hero__ridestald-button">
+                <i class="fa fa-plus"></i>
+              </button>
+            </div>
           </div>
         </section>
       </section>
     </div>
-    <script type="text/javascript">
-      // let audioAuto = function () {
-      //   let audio = document.getElementById("audioVolume").autoplay;
-      // };
-    </script>
+    <script type="text/javascript"></script>
   </body>
 </html>
