--- a/index.html
+++ b/index.html
@@ -728,6 +728,14 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript">
+      $("nav li").hover(
+        function () {
+          $("ul", this).stop().slideDown(200);
+        },
+        function () {
+          $("ul", this).stop().slideUp(200);
+        }
+      );
       $(document).ready(function () {
         $("#af7c5496-b297-4d3d-b705-41f5982dec9f").hide();
         $("#efterskole-btn").hover(
