--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
+
   <body>
-    <section class="header">
+    <div class="container">
+    <section id="section-one">
       <nav>
         <div class="nav__container">
           <div class="nav__logo">
@@ -793,6 +795,10 @@
         </div>
       </section>
     </section>
+    <section id="#section-two">
+      <p>Fuck dig daniel</p>
+    </section>
+  </div>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
