--- a/index.html
+++ b/index.html
@@ -795,9 +795,7 @@
         </div>
       </section>
     </section>
-    <section id="#section-two">
-      <p>Fuck dig daniel</p>
-    </section>
+
   </div>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -851,6 +849,21 @@
           }
         );
       });
+      $("#nav-home").on("click", function () {
+          window.open("");
+      })
+      $("#efterskole-btn").on("click", function () {
+        window.open("");
+      })
+      $("#ridebane-btn").on("click", function () {
+        window.open("");
+      })
+      $("#ridehal-btn").on("click", function () {
+        window.open("");
+      })
+      $("ridestald-btn").on("click", function () {
+        window.open("");
+      })
     </script>
   </body>
 </html>
