--- a/klank-stald.html
+++ b/klank-stald.html
@@ -183,7 +183,7 @@
         );
       });
       $("#nav-home").on("click", function () {
-          window.open("");
+          location.replace("https://www.biva.dk/opbevaring/reoler/reol/","_blank");
       })
     </script>
   </body>
