--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <section id="section-one">
       <nav>
         <div class="nav__container">
-          <div class="nav__logo">
             <svg
               id="nav-home-klank"
-              class="nav-logo"
+              class="nav__logo"
               viewBox="0 0 239 56"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -55,9 +54,8 @@
                 fill="white"
                 class="klank-logo-5"
               ></path>
-              />
+              
             </svg>
-          </div>
           <ul>
             <li>
               <a href="#">Livet på Klank</a>
